Pull request #1241: fix margin in filter list
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 7de971362d15eef50750fe4b5ffbec279e1cbb9e
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Apr 11 18:50:03 2022 +0300

    AG-13432 thin scrollbar in fierfox

commit afef582fc7e08fbb3018e6761cb15b2358ecec6a
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Apr 11 16:29:11 2022 +0300

    AG-13432 fix margin in filter list

--- a/Extension/src/pages/options/components/Filters/filter.pcss
+++ b/Extension/src/pages/options/components/Filters/filter.pcss
@@ -10,6 +10,7 @@
         word-break: break-word;
         font-weight: 500;
         font-size: 16px;
+        margin-bottom: 4px;
     }
 
     &__search {
@@ -44,7 +45,6 @@
     }
 
     &__desc {
-        padding: 4px 0;
         margin-right: 55px;
         color: var(--grayd8);
         font-size: 14px;
@@ -54,6 +54,10 @@
             color: var(--green74);
             text-decoration: underline;
         }
+    }
+
+    &__desc-item {
+        margin-bottom: 4px;
     }
 
     &__tags {
@@ -66,7 +70,7 @@
         position: relative;
         cursor: pointer;
         margin-right: 20px;
-        margin-top: 10px;
+        margin-top: 6px;
         color: var(--green74);
         word-break: break-word;
 
