--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -16,6 +16,7 @@
     &__content {
         height: 168px;
         overflow: auto;
+        scrollbar-width: thin;
 
         &::-webkit-scrollbar {
             width: 12px;
